# embedded

./: .gitmodules
BtHomeSensor/: esp32s3-bridge.cfg  esp_usb_bridge.cfg
BtHomeSensor/.devcontainer/: Dockerfile  devcontainer.json  west.yml
BtHomeSensor/app/: CMakeLists.txt  prj.conf
BtHomeSensor/app/src/: main.c
driver_controller/esp32/: CMakeLists.txt  sdkconfig  sdkconfig.old
driver_controller/stm32f042/: .cproject  .project  Makefile  README.md
driver_controller/stm32g431/: .cproject  .project  Makefile
driver_controller/stm32g431/platform/zephyr/app/: CMakeLists.txt  Kconfig  prj.conf
driver_controller/stm32g431/platform/zephyr/app/boards/: nucleo_g431kb.overlay
driver_controller/stm32g431/platform/zephyr/app/dts/bindings/: infineon,ad7171.yaml  st,vnh5019a.yaml  ti,drv8838.yaml
driver_controller/stm32g431/platform/zephyr/app/include/: adc.h  button.h  buttons.h  canConfig.h  dictionary.h  drv8838.h  inputBuilder.h  inputInterface.h  lin.h  linInputBuilder.h  main.h  motorBuilder.h  motorInterface.h  motorctrl.h  spiBuilder.h  spiConfig.h  spiInterface.h  tle94103.h  vnh5019a.h  zephyrSpi.h
driver_controller/stm32g431/platform/zephyr/app/src/: button.cpp  buttons.cpp  dictionary.cpp  main.c  main.cpp  motorctrl.cpp  tle94103.cpp
driver_controller/stm32g431/platform/zephyr/app/src/adc/: adc.cpp  adc.h  adcInputBuilder.h
driver_controller/stm32g431/platform/zephyr/app/src/can/: CMakeLists.txt  can.cpp  can.h  canConfig.c  canConfig.cpp
driver_controller/stm32g431/platform/zephyr/app/src/lin/: lin.cpp  lin.h
driver_controller/stm32g431/platform/zephyr/app/src/motor/: drv8838.cpp  drv8838.h  motorInterface.h  tle94103.cpp  tle94103.h  vnh5019a.cpp
driver_controller/stm32g431/platform/zephyr/app/src/motordrv/: tle94103.cpp
driver_controller/stm32g431/platform/zephyr/app/src/spi/: spiBuilderInterface.h  spiConfig.c  spiInterface.h  zephyrSpi.cpp  zephyrSpi.h  zephyrSpiBuilder.h
esp32/driver_controller/: CMakeLists.txt  sdkconfig
make_projects_template/: Makefile
(+222 files in other folders)
